# isthissignif

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: isthissignif_example.ipynb
htmlcov/: d_4e9a9de12d11a99a___init___py.html  d_4e9a9de12d11a99a_isthissignif_py.html  index.html  status.json
src/isthissignif/: __init__.py  isthissignif.py
tests/: test_isthissignif.py
