[tool.poetry]
name = "isthissignif"
version = "0.1.0"
description = "Test whether or not your OLS regression model is statistically significant based on different criteria."
authors = ["Gracen Bourbeau"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pandas = "^1.5.2"
statsmodels = "^0.13.5"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
